--- a/MaintenanceDashboard.Client/Views/CreateThermostatControl.xaml
+++ b/MaintenanceDashboard.Client/Views/CreateThermostatControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.CreateThermostat"
+﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.CreateThermostatControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -24,21 +24,20 @@
                     <materialDesign:PackIcon Kind="BarcodeScanner" VerticalAlignment="Center" Width="30" Height="30"/>
                     <TextBox Width="220" materialDesign:HintAssist.Hint="Numer termostatu" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
-                             Background="White"
-                             Text="{Binding Number, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Margin="10"/>
+                             Background="White" Text="{Binding BarcodeNumber, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Margin="10"/>
                 </WrapPanel>
 
                 <WrapPanel>
-                    <materialDesign:PackIcon Kind="BarcodeScanner" VerticalAlignment="Center" Width="30" Height="30"/>
-                    <TextBox Width="220" materialDesign:HintAssist.Hint="Numer seryjny" 
+                    <materialDesign:PackIcon Kind="Number0BoxMultipleOutline" VerticalAlignment="Center" Width="30" Height="30"/>
+                    <TextBox Width="220" materialDesign:HintAssist.Hint="Numer seryjny"
+                             materialDesign:HintAssist.HelperText="Pole musi być wypełnione"
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
-                             Background="White"
-                             Text="{Binding Number, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Margin="10"/>
+                             Background="White" Text="{Binding SerialNumber, UpdateSourceTrigger=PropertyChanged}" Margin="10"/>
                 </WrapPanel>
 
                 <WrapPanel>
                     <materialDesign:PackIcon Kind="Car" VerticalAlignment="Center" Width="30" Height="30"/>
-                    <TextBox  materialDesign:HintAssist.Hint="Model" Width="220" IsEnabled="False" 
+                    <TextBox  materialDesign:HintAssist.Hint="Model" Width="220"  
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
                                Text="{Binding Model}"/>
                 </WrapPanel>
@@ -59,7 +58,7 @@
                 </WrapPanel>
                 <Button Height="25"  Background="#FF0069C0"  
                              BorderBrush="#FF0069C0"  Width="100" Content="DODAJ" Margin="10"  Grid.Column="1"
-                             Command="{Binding CreatePaddleCommand}"/>
+                             Command="{Binding CreateThermostatCommand}"/>
             </StackPanel>
         </Grid>
     </Grid>
