--- a/MaintenanceDashboard.Client/Views/EditPaddleControl.xaml
+++ b/MaintenanceDashboard.Client/Views/EditPaddleControl.xaml
@@ -25,7 +25,7 @@
 
             <DataGrid ItemsSource="{Binding Paddles}" SelectedItem="{Binding SelectedPaddle}" IsReadOnly="True"
                           Grid.Column="1" Grid.Row="1"  Margin="10,10,0,10" Background="White" AutoGenerateColumns="False" 
-                      HorizontalAlignment="Left" Height="400" Width="560">
+                      HorizontalAlignment="Left" Height="400" Width="560" FontSize="11">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Numer" Binding="{Binding Number}"/>
                     <DataGridTextColumn Header="Model" Binding="{Binding Model}"/>
