--- a/MaintenanceDashboard.Client/Views/CreatePaddleControl.xaml
+++ b/MaintenanceDashboard.Client/Views/CreatePaddleControl.xaml
@@ -24,7 +24,7 @@
                     <TextBox Width="220" materialDesign:HintAssist.Hint="Numer paletki" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
                              Background="White"
-                             Text="{Binding Number, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Margin="10"/>
+                             Text="{Binding BarcodeNumber, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Margin="10"/>
 
                 </WrapPanel>
 
