--- a/MaintenanceDashboard.Client/Views/SpendPaddle.xaml
+++ b/MaintenanceDashboard.Client/Views/SpendPaddle.xaml
@@ -48,7 +48,7 @@
                         <materialDesign:PackIcon Kind="BarcodeScanner" VerticalAlignment="Center" Width="30" Height="30"/>
                         <TextBox  Width="220" materialDesign:HintAssist.Hint="Numer paletki" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
-                              Text="{Binding SelectedReceivedPaddle.Paddle.Number}" 
+                              Text="{Binding SelectedReceivedPaddle.Paddle.BarcodeNumber}" 
                               Margin="10"  IsReadOnly="True" ToolTip="W celu wypełnienia pola wybierz paletke z listy obok"/>
                     </WrapPanel>
 
@@ -57,7 +57,7 @@
                         <TextBox  Width="220" materialDesign:HintAssist.Hint="Data dodania" IsReadOnly="True" 
                                   ToolTip="W celu wypełnienia pola wybierz paletke z listy obok"
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
-                              Text="{Binding SelectedReceivedPaddle.AddedDate}"
+                              Text="{Binding SelectedReceivedPaddle.ReceivedDate}"
                               Margin="10"/>
                     </WrapPanel>
 
@@ -110,8 +110,8 @@
                 <DataGrid ItemsSource="{Binding ReceivedPaddles}" SelectedItem="{Binding SelectedReceivedPaddle}"  Margin="10,10,0,10" FontSize="11" 
                           Grid.Column="1" Background="White" AutoGenerateColumns="False" IsReadOnly="True" HorizontalAlignment="Left" Height="500" Width="580" >
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Numer" Binding="{Binding Paddle.Number}"/>
-                        <DataGridTextColumn Header="Data dodania" Binding="{Binding AddedDate}"/>
+                        <DataGridTextColumn Header="Numer" Binding="{Binding Paddle.BarcodeNumber}"/>
+                        <DataGridTextColumn Header="Data dodania" Binding="{Binding ReceivedDate}"/>
                         <DataGridTextColumn Header="Planowana naprawa" Binding="{Binding PlannedRepairDate}"/>
                         <DataGridTextColumn Header="Akcja" Binding="{Binding ActivityPerformed}"/>
                         <DataGridTextColumn Header="Przyjmujący pracownik" Binding="{Binding ReceivingEmployee}"/>
