--- a/MaintenanceDashboard.Client/Views/EditThermostatControl.xaml
+++ b/MaintenanceDashboard.Client/Views/EditThermostatControl.xaml
@@ -17,7 +17,7 @@
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="520"/>
+                <RowDefinition Height="550"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
 
@@ -26,7 +26,7 @@
 
             <DataGrid ItemsSource="{Binding Thermostats}" SelectedItem="{Binding SelectedThermostat}" IsReadOnly="True"
                           Grid.Column="1" Grid.Row="1"  Margin="10,10,0,10" Background="White" AutoGenerateColumns="False" 
-                      HorizontalAlignment="Left" Height="500" Width="560" FontSize="11">
+                      HorizontalAlignment="Left" Height="530" Width="560" FontSize="11">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Numer" Binding="{Binding BarcodeNumber}"/>
                     <DataGridTextColumn Header="Numer seryjny" Binding="{Binding SerialNumber}"/>
@@ -34,6 +34,7 @@
                     <DataGridTextColumn Header="Data dodania" Binding="{Binding AddedDate}"/>
                     <DataGridTextColumn Header="Ostatnia prewencja" Binding="{Binding LastPrevention}"/>
                     <DataGridTextColumn Header="Ostatnie płukanie" Binding="{Binding LastWashDate}"/>
+                    <DataGridTextColumn Header="Lokalizacja" Binding="{Binding CurrentLocation}"/>
                     <DataGridTextColumn Header="Uwagi" Binding="{Binding Comments}"/>
                 </DataGrid.Columns>
             </DataGrid>
@@ -90,6 +91,14 @@
                               materialDesign:HintAssist.HelperText=""  IsEnabled="False"
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
                               Text="{Binding SelectedThermostat.LastWashDate}"/>
+                </WrapPanel>
+
+                <WrapPanel>
+                    <materialDesign:PackIcon Kind="MapMarkerOutline" VerticalAlignment="Center" Width="30" Height="30"/>
+                    <TextBox  materialDesign:HintAssist.Hint="Lokalizacja" Width="220" 
+                              materialDesign:HintAssist.HelperText=""  IsEnabled="False"
+                              Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
+                              Text="{Binding SelectedThermostat.CurrentLocation}"/>
                 </WrapPanel>
 
                 <WrapPanel>
