--- a/MaintenanceDashboard.Client/Views/SpendThermostat.xaml
+++ b/MaintenanceDashboard.Client/Views/SpendThermostat.xaml
@@ -1,20 +1,26 @@
-﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.SpendPaddleControl"
+﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.SpendThermostatControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:MaintenanceDashboard.Client.Views"
+             mc:Ignorable="d" 
+             Width="920" Height="750"
+             xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels" 
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             mc:Ignorable="d" Width="920" Height="750"
-             xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
-             d:DataContext="{d:DesignInstance viewModels:ReceivedPaddleViewModel}">
+             d:DataContext="{d:DesignInstance viewModels:ThermostatViewModel}">
     <Grid>
-        <ContentControl Style="{StaticResource RectangleView}"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="49*"/>
+            <ColumnDefinition Width="43*"/>
+        </Grid.ColumnDefinitions>
+        <ContentControl Style="{StaticResource RectangleView}" Grid.ColumnSpan="2"/>
 
-        <Grid  Margin="15,80,15, 15" Width="Auto" Height="Auto">
-            <TextBlock Text="WYDANIE PALETKI" HorizontalAlignment="Center" VerticalAlignment="Top"  
+        <Grid  Margin="15,80,15, 15" Width="Auto" Height="Auto" Grid.ColumnSpan="2">
+            <TextBlock Text="WYDANIE TERMOSTATU" HorizontalAlignment="Center" VerticalAlignment="Top"  
                            FontSize="18"  Foreground="Gray" Margin="18"/>
 
-            <Grid  HorizontalAlignment="Center" VerticalAlignment="Center" Height="520">
+            <Grid  HorizontalAlignment="Center" VerticalAlignment="Center" Height="540">
 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -44,11 +50,38 @@
                         </ComboBox>
                     </WrapPanel>
 
+                    <WrapPanel Grid.Column="0" Grid.Row="5">
+                        <materialDesign:PackIcon Kind="MapMarkerOutline" VerticalAlignment="Center" Width="30" Height="30"/>
+                        <ComboBox materialDesign:HintAssist.Hint="Lokalizacja" MinWidth="220" Grid.Column="1" Grid.Row="5" 
+                          Margin="10" SelectedValue="{Binding CurrentLocation}" SelectedValuePath="Content"
+                               materialDesign:HintAssist.HelperText="Pole musi być wypełnione"
+                              ToolTip="Na jaka maszyne?">
+                            <ComboBoxItem>1B</ComboBoxItem>
+                            <ComboBoxItem>2B</ComboBoxItem>
+                            <ComboBoxItem>3B</ComboBoxItem>
+                            <ComboBoxItem>4B</ComboBoxItem>
+                            <ComboBoxItem>5B</ComboBoxItem>
+                            <ComboBoxItem>6B</ComboBoxItem>
+                            <ComboBoxItem>7B</ComboBoxItem>
+                            <ComboBoxItem>8B</ComboBoxItem>
+                            <ComboBoxItem>9B</ComboBoxItem>
+                            <ComboBoxItem>10B</ComboBoxItem>
+                            <ComboBoxItem>11B</ComboBoxItem>
+                            <ComboBoxItem>12B</ComboBoxItem>
+                            <ComboBoxItem>13B</ComboBoxItem>
+                            <ComboBoxItem>14B</ComboBoxItem>
+                            <ComboBoxItem>15B</ComboBoxItem>
+                            <ComboBoxItem>16B</ComboBoxItem>
+                            <ComboBoxItem>Warsztat</ComboBoxItem>
+                            <ComboBoxItem>Wydanie zewnetrzne</ComboBoxItem>
+                        </ComboBox>
+                    </WrapPanel>
+
                     <WrapPanel>
                         <materialDesign:PackIcon Kind="BarcodeScanner" VerticalAlignment="Center" Width="30" Height="30"/>
-                        <TextBox  Width="220" materialDesign:HintAssist.Hint="Numer paletki" 
+                        <TextBox  Width="220" materialDesign:HintAssist.Hint="Numer termostatu" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
-                              Text="{Binding SelectedReceivedPaddle.Paddle.BarcodeNumber}" 
+                              Text="{Binding SelectedReceivedThermostat.Thermostat.BarcodeNumber}" 
                               Margin="10"  IsReadOnly="True" ToolTip="W celu wypełnienia pola wybierz paletke z listy obok"/>
                     </WrapPanel>
 
@@ -57,7 +90,7 @@
                         <TextBox  Width="220" materialDesign:HintAssist.Hint="Data dodania" IsReadOnly="True" 
                                   ToolTip="W celu wypełnienia pola wybierz paletke z listy obok"
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
-                              Text="{Binding SelectedReceivedPaddle.ReceivedDate}"
+                              Text="{Binding SelectedReceivedThermostat.ReceivedDate}"
                               Margin="10"/>
                     </WrapPanel>
 
@@ -67,7 +100,7 @@
                         <TextBox  Width="220" materialDesign:HintAssist.Hint="Akcja" IsReadOnly="True" 
                                   ToolTip="W celu wypełnienia pola wybierz paletke z listy obok"
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}"  Margin="10"
-                              Text="{Binding SelectedReceivedPaddle.ActivityPerformed}"
+                              Text="{Binding SelectedReceivedThermostat.ActivityPerformed}"
                                materialDesign:HintAssist.HelperText="Wykonywane czynnosci"/>
                     </WrapPanel>
 
@@ -91,31 +124,32 @@
                     <WrapPanel>
                         <materialDesign:PackIcon Kind="ShoppingCartMinus" VerticalAlignment="Center" Width="30" Height="30"/>
                         <TextBox  Width="220" materialDesign:HintAssist.Hint="Zamówienie" IsReadOnly="True" ToolTip="W celu wypełnienia pola wybierz paletke z listy obok"
-                              Text="{Binding SelectedReceivedPaddle.IsOrders}"
+                              Text="{Binding SelectedReceivedThermostat.IsOrders}"
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}"  Margin="10"/>
                     </WrapPanel>
 
                     <WrapPanel>
                         <materialDesign:PackIcon Kind="NoteTextOutline" VerticalAlignment="Center" Width="30" Height="30"/>
                         <TextBox  Width="220" materialDesign:HintAssist.Hint="Uwagi"
-                              Text="{Binding SelectedReceivedPaddle.Comments}"
+                              Text="{Binding SelectedReceivedThermostat.Comments}"
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"/>
                     </WrapPanel>
 
                     <Button Height="25"  Background="#FF0069C0" 
                              BorderBrush="#FF0069C0"  Width="110" Content="WYDAJ" 
-                            Margin="10" Command="{Binding SpendPaddleCommand}" />
+                            Margin="10" Command="{Binding SpendThermostatCommand}" />
                 </StackPanel>
 
-                <DataGrid ItemsSource="{Binding ReceivedPaddles}" SelectedItem="{Binding SelectedReceivedPaddle}"  Margin="10,10,0,10" FontSize="11" 
+                <DataGrid ItemsSource="{Binding ReceivedThermostats}" SelectedItem="{Binding SelectedReceivedThermostat}"  Margin="10,10,0,10" FontSize="11" 
                           Grid.Column="1" Background="White" AutoGenerateColumns="False" IsReadOnly="True" HorizontalAlignment="Left" Height="500" Width="580" >
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Numer" Binding="{Binding Paddle.BarcodeNumber}"/>
+                        <DataGridTextColumn Header="Numer" Binding="{Binding Thermostat.BarcodeNumber}"/>
                         <DataGridTextColumn Header="Data dodania" Binding="{Binding ReceivedDate}"/>
                         <DataGridTextColumn Header="Planowana naprawa" Binding="{Binding PlannedRepairDate}"/>
                         <DataGridTextColumn Header="Akcja" Binding="{Binding ActivityPerformed}"/>
                         <DataGridTextColumn Header="Przyjmujący pracownik" Binding="{Binding ReceivingEmployee}"/>
                         <DataGridTextColumn Header="Zamówienie" Binding="{Binding IsOrders}"/>
+                        <DataGridTextColumn Header="Lokalizacja" Binding="{Binding Thermostat.CurrentLocation}"/>
                         <DataGridTextColumn Header="Uwagi" Binding="{Binding Comments}"/>
                     </DataGrid.Columns>
                 </DataGrid>
