--- a/MaintenanceDashboard.Client/MainWindow.xaml
+++ b/MaintenanceDashboard.Client/MainWindow.xaml
@@ -38,7 +38,7 @@
                                            Development by Michał Górnik <LineBreak/>
                                            michalgornik93@outlook.com <LineBreak/>
                                            MaintenanceDashboard<LineBreak/>
-                                           Vesion 2.0.1 <LineBreak/>
+                                           Vesion 2.0.2 <LineBreak/>
 
                                 </TextBlock>
                             </StackPanel>
@@ -107,7 +107,7 @@
         <Grid Margin="330 20 10 10">
             <Grid x:Name="GridPrincipal" HorizontalAlignment="Center" VerticalAlignment="Center">
 
-                <Image Source="Image/Zenek.png"/>
+                <!--<Image Source="Image/Zenek.png"/>-->
 
             </Grid>
         </Grid>
