--- a/MaintenanceDashboard.Client/Views/CreatePaddleControl.xaml
+++ b/MaintenanceDashboard.Client/Views/CreatePaddleControl.xaml
@@ -51,7 +51,7 @@
                 </WrapPanel>
                 <Button Height="25"  Background="#FF0069C0"  
                              BorderBrush="#FF0069C0"  Width="100" Content="DODAJ" Margin="10"  Grid.Column="1"
-                             Command="{Binding CreatePaddleCommand}"/>
+                             Command="{Binding CreateCommand}"/>
             </StackPanel>
         </Grid>
     </Grid>
