--- a/MaintenanceDashboard.Client/Views/ReceiveThermostatControl.xaml
+++ b/MaintenanceDashboard.Client/Views/ReceiveThermostatControl.xaml
@@ -86,7 +86,7 @@
                 </WrapPanel>
 
                 <Button Height="25"  Background="#FF0069C0" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2"
-                             BorderBrush="#FF0069C0"  Width="110" Content="POTWIERDŹ" Margin="10" Command="{Binding AcceptanceThermostatCommand}"/>
+                             BorderBrush="#FF0069C0"  Width="110" Content="POTWIERDŹ" Margin="10" Command="{Binding ReceiveCommand}"/>
 
             </StackPanel>
         </Grid>
