--- a/MaintenanceDashboard.Client/Views/CreateEmployeeControl.xaml
+++ b/MaintenanceDashboard.Client/Views/CreateEmployeeControl.xaml
@@ -36,7 +36,7 @@
 
                 <Button Height="25"  Background="#FF0069C0"  
                              BorderBrush="#FF0069C0"  Width="100" Content="DODAJ" Margin="10"  Grid.Column="1"
-                             Command="{Binding CreateEmployeeCommand}"/>
+                             Command="{Binding CreateCommand}"/>
             </StackPanel>
         </Grid>
     </Grid>
