--- a/MaintenanceDashboard.Client/Views/CreateThermostatControl.xaml
+++ b/MaintenanceDashboard.Client/Views/CreateThermostatControl.xaml
@@ -58,7 +58,7 @@
                 </WrapPanel>
                 <Button Height="25"  Background="#FF0069C0"  
                              BorderBrush="#FF0069C0"  Width="100" Content="DODAJ" Margin="10"  Grid.Column="1"
-                             Command="{Binding CreateThermostatCommand}"/>
+                             Command="{Binding CreateCommand}"/>
             </StackPanel>
         </Grid>
     </Grid>
