--- a/MaintenanceDashboard.Client/Views/HistorySpendedThermostat.xaml
+++ b/MaintenanceDashboard.Client/Views/HistorySpendedThermostat.xaml
@@ -21,14 +21,14 @@
 
                 <TextBox Margin="5"  Width="150" Height="35"  Foreground="Gray" Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                                   materialDesign:HintAssist.Hint="Numer termostatu" Text="{Binding BarcodeNumber}" />
-                <Button Margin="5, 5, 5, 0" Background="White" BorderBrush="White" Foreground="Gray" Command="{Binding GetFiltredSpendedThermostatListCommand}"
+                <Button Margin="5, 5, 5, 0" Background="White" BorderBrush="White" Foreground="Gray" Command="{Binding GetFiltredListCommand}"
                                  Style="{StaticResource MaterialDesignFlatButton}" HorizontalAlignment="Center">
                     <materialDesign:PackIcon Kind="Search" Height="20" Width="20"/>
                 </Button>
             </WrapPanel>
 
             <Button Style="{StaticResource MaterialDesignFlatButton}" Height="40" FontSize="14" Margin="10" Width="160" VerticalAlignment="Bottom" 
-                    Foreground="Gray" HorizontalAlignment="Right" Content="POKAŻ WSZYSTKIE" Command="{Binding GetSpendedThermostatListCommand}"/>
+                    Foreground="Gray" HorizontalAlignment="Right" Content="POKAŻ WSZYSTKIE" Command="{Binding GetAllCommand}"/>
 
 
             <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Height="520">
