--- a/MaintenanceDashboard.Client/Views/ReceivePaddleControl.xaml
+++ b/MaintenanceDashboard.Client/Views/ReceivePaddleControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.AcceptancePaddleControl"
+﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.ReceivePaddleControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -84,7 +84,7 @@
                 </WrapPanel>
 
                 <Button Height="25"  Background="#FF0069C0" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2"
-                             BorderBrush="#FF0069C0"  Width="110" Content="POTWIERDŹ" Margin="10" Command="{Binding AcceptancePaddleCommand}"/>
+                             BorderBrush="#FF0069C0"  Width="110" Content="POTWIERDŹ" Margin="10" Command="{Binding ReceiveCommand}"/>
 
             </StackPanel>
         </Grid>
