--- a/MaintenanceDashboard.Client/MainWindow.xaml
+++ b/MaintenanceDashboard.Client/MainWindow.xaml
@@ -12,7 +12,8 @@
         TextOptions.TextRenderingMode="Auto"
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"
-         WindowState="Maximized" WindowStyle="None">
+        WindowState="Maximized" WindowStyle="None">
+    
     <Grid Background="#FFFFFFFF">
         <StackPanel>
             <Grid Background="#FF0069C0" Height="10"/>
@@ -22,7 +23,7 @@
                             Orientation="Horizontal" Margin="0,0,10,0" 
                             Grid.Column="1">
 
-
+                    <TextBlock Text="{Binding Test}"/>
                     <StackPanel VerticalAlignment="Center" Margin="7">
                         <materialDesign:PopupBox StaysOpen="True" HorizontalAlignment="Center">
                             <materialDesign:PopupBox.ToggleContent>
@@ -121,7 +122,7 @@
                                        VerticalAlignment="Center" Margin="20 0" />
                         </StackPanel>
                     </ListViewItem>
-                    
+
                     <ListViewItem x:Name="itemEmployee" Height="60" Foreground="LightGray" IsEnabled="False">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Kind="UsersGroupOutline" Width="30" Height="30"
@@ -165,14 +166,11 @@
                         </StackPanel>
                     </ListViewItem>
 
-                    <ListViewItem Height="60" Foreground="LightGray" Style="{StaticResource BlinkingStackPanel}" >
-
-
+                    <ListViewItem x:Name="PreventionListViewItem" Height="60" Foreground="LightGray"  >
                         <StackPanel Orientation="Horizontal" >
-                            
                             <materialDesign:PackIcon Kind="BellOutline" Width="30" Height="30"  
                                                      VerticalAlignment="Center" Margin="5"/>
-                            <TextBlock Text="Alarmy" 
+                            <TextBlock Text="Prewencje" 
                                        VerticalAlignment="Center" Margin="20 0" />
                         </StackPanel>
                     </ListViewItem>
