--- a/MaintenanceDashboard.Client/Views/AlarmsControl.xaml
+++ b/MaintenanceDashboard.Client/Views/AlarmsControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.AlarmsControl"
+﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.PreventionControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
-             d:DataContext="{d:DesignInstance viewModels:AlarmsViewModel}"
+             d:DataContext="{d:DesignInstance viewModels:PreventionViewModel}"
              Width="920" Height="750">
     <Grid>
         <ContentControl Style="{StaticResource RectangleView}"/>
