--- a/MaintenanceDashboard.Client/Views/PreventionControl.xaml
+++ b/MaintenanceDashboard.Client/Views/PreventionControl.xaml
@@ -15,15 +15,20 @@
         <Grid  Margin="15,80,15, 15" Width="Auto" Height="Auto">
 
             <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}"  VerticalAlignment="Top"
-                                           HorizontalAlignment="Center" Margin="18" Foreground="Gray" Text="ALARMY" FontSize="18" />
+                                           HorizontalAlignment="Center" Margin="18" Foreground="Gray" Text="PREWENCJE" FontSize="18" />
             <StackPanel HorizontalAlignment="Center" Margin="25" VerticalAlignment="Center">
-                <ListBox ItemsSource="{Binding Alarms}">
-                    <ListBox.ItemTemplate >
-                        <DataTemplate>
-                            <TextBlock Text="{Binding}"  Margin="5" Foreground="Gray" FontSize="14"/>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
+               
+                <DataGrid Margin="10" Background="White" ItemsSource="{Binding Preventions}" AlternationCount="{Binding Preventions.Count}"
+                          AutoGenerateColumns="False" IsReadOnly="True" Height="500" Width="820" FontSize="11">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Nr."  Binding="{Binding AlternationIndex, RelativeSource={RelativeSource AncestorType=DataGridRow}}"/>
+                        <DataGridTextColumn Header="Numer" Binding="{Binding BarcodeNumber}"/>
+                        <DataGridTextColumn Header="Numer seryjny" Binding="{Binding SerialNumber}"/>
+                        <DataGridTextColumn Header="Data ostatniej prewencji" Binding="{Binding LastPrevention}"/>
+                        <DataGridTextColumn Header="Model" Binding="{Binding Model}"/>
+                        <DataGridTextColumn Header="Akcja" Binding="{Binding PreventionDescription}"/>
+                    </DataGrid.Columns>
+                </DataGrid>
             </StackPanel>
         </Grid>
     </Grid>
