--- a/MaintenanceDashboard.Client/Views/PreventionControl.xaml
+++ b/MaintenanceDashboard.Client/Views/PreventionControl.xaml
@@ -2,10 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MaintenanceDashboard.Client.Views"
-             mc:Ignorable="d" 
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
              xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
              d:DataContext="{d:DesignInstance viewModels:PreventionViewModel}"
              Width="920" Height="750">
@@ -15,7 +13,7 @@
         <Grid  Margin="15,80,15, 15" Width="Auto" Height="Auto">
 
             <TextBlock Style="{StaticResource MaterialDesignHeadline6TextBlock}"  VerticalAlignment="Top"
-                                           HorizontalAlignment="Center" Margin="18" Foreground="Gray" Text="PREWENCJE" FontSize="18" />
+                                           HorizontalAlignment="Center" Margin="18" Foreground="Gray" Text="PREWENCJE DO WYKONANIA" FontSize="18" />
             <StackPanel HorizontalAlignment="Center" Margin="25" VerticalAlignment="Center">
                
                 <DataGrid Margin="10" Background="White" ItemsSource="{Binding Preventions}" AlternationCount="{Binding Preventions.Count}"
